2001-10-12  Kjetil Jacobsen  <kjetilja>

	* Added module docstrings, terse perhaps, but better than nothing.
	
	* Added the 'basicfirst.py' file which is a Python version of the
	corresponding Perl script by Daniel.

2001-08-21  Kjetil Jacobsen  <kjetilja>

	* Cleaned up the script with GNOME/PycURL integration.

2001-08-20  Kjetil Jacobsen  <kjetilja>

	* Added another test script for shipping XML-RPC requests which
	uses py-xmlrpc to encode the arguments (tests/test_xmlrpc2.py).

2001-08-20  Kjetil Jacobsen  <kjetilja>

	* Added test script for using PycURL and GNOME (tests/test_gtk.py).

2001-08-20  Kjetil Jacobsen  <kjetilja>

	* Added test script for using XML-RPC (tests/test_xmlrpc.py).

	* Added more comments to the test sources.

2001-08-06  Kjetil Jacobsen  <kjetilja>

	* Renamed module namespace to pycurl instead of curl.

2001-08-06  Kjetil Jacobsen  <kjetilja>

	* Set CURLOPT_VERBOSE to 0 by default.

2001-06-29  Kjetil Jacobsen  <kjetilja>

	* Updated INSTALL, curl version 7.8 or greater is now mandatory to
	use pycurl.

2001-06-13  Kjetil Jacobsen  <kjetilja>

	* Set NOPROGRESS to 1 by default.

2001-06-07  Kjetil Jacobsen  <kjetilja>

	* Added global_init/cleanup.

2001-06-06  Kjetil Jacobsen  <kjetilja>

	* Added HEADER/PROGRESSFUNCTION callbacks (see files in tests/).

	* Added PASSWDFUNCTION callback (untested).
	
	* Added READFUNCTION callback (untested).
	
2001-06-05  Kjetil Jacobsen  <kjetilja>

	* WRITEFUNCTION callbacks now work (see tests/test_cb.py for details).

	* Preliminary distutils installation.

	* Added CLOSEPOLICY constants to module namespace.
	
2001-06-04  Kjetil Jacobsen  <kjetilja>

	* Return -1 on error from Python callback in WRITEFUNCTION callback.

2001-06-01  Kjetil Jacobsen  <kjetilja>

	* Moved source to src and tests to tests directory.

2001-05-31  Kjetil Jacobsen  <kjetilja>

	* Added better type checking for setopt.

2001-05-30  Kjetil Jacobsen  <kjetilja>

	* Moved code to sourceforge.

	* Added getinfo support.